# BocoSolver

./: Cargo.toml
src/: builder.rs  example_boards.rs  hasher.rs  main.rs  solver.rs  test.rs  utils.rs
src/model/: block.rs  board.rs  color.rs  mod.rs  neighbour_ids.rs  network_node.rs  orientation.rs  player.rs  position.rs  size.rs  unit.rs
