[package]
name = "boco_solver"
version = "0.1.0"
authors = ["James Baxter <james.baxter@focusrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

petgraph = "0.5.1"
enum-iterator = "0.6.0"
maplit = "1.0.2"
tinyset = "0.4.4"
rayon = "1.5"